--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "db:init": "node scripts/init-database.js",
+    "db:init:railway": "node scripts/init-railway-db.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
