--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,22 +4,38 @@ PORT=3000
 HOST=localhost
 
 # 数据库配置
-DATABASE_URL=postgresql://username:password@localhost:5432/echo_game
+DATABASE_URL=postgresql://postgres:your_password@localhost:5432/three_brothers_game
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=echo_game
-DB_USER=username
-DB_PASSWORD=password
+DB_NAME=three_brothers_game
+DB_USER=postgres
+DB_PASSWORD=your_password
+DB_SSL=false  # 本地开发设为 false，生产环境设为 true
+
+# 数据库连接池配置
+DB_POOL_MAX=20          # 最大连接数
+DB_POOL_MIN=5           # 最小保持连接数
+DB_IDLE_TIMEOUT=30000   # 空闲连接超时时间（毫秒）
+DB_CONNECTION_TIMEOUT=10000  # 获取连接超时时间（毫秒）
+DB_MAX_USES=7500        # 单个连接最大使用次数
+
+# 应用名称（用于数据库连接识别）
+APP_NAME=echo-game-backend
 
 # Redis配置
 REDIS_URL=redis://localhost:6379
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
+REDIS_DB=0                    # Redis 数据库索引（0-15）
+REDIS_CONNECT_TIMEOUT=10000   # 连接超时时间（毫秒）
+REDIS_KEEPALIVE=5000          # 保持连接时间（毫秒）
 
-# JWT配置
-JWT_SECRET=your_super_secret_jwt_key_change_in_production
-JWT_EXPIRES_IN=7d
+# JWT配置（生成强密钥: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"）
+JWT_SECRET=your_jwt_secret_key_here
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_key_here
+JWT_EXPIRE=24h
+JWT_EXPIRES_IN=24h
 JWT_REFRESH_EXPIRES_IN=30d
 
 # CORS配置
