feat: refactor character selection flow - allow selecting character in room

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "start": "node dist/server.js",
     "db:init": "node scripts/init-database.js",
     "db:init:railway": "node scripts/init-railway-db.js",
+    "db:migrate:character": "node scripts/migrate-character-nullable.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
